--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ hello, world
 <! DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>A whale of a greeting</title>
 	</head>
 	<body>
 		<h1>hello, world</h1>
 		<p>Call me Ishael.</p>
+		<img src="images/breaching_whale.jpg"/>
 	</body>
 </html>
